<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:scrollbars="none"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personalDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/userProfile_inter_space_large"
                android:text="@string/personal_details"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/default_textView_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nicknameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size"/>

            <EditText
                android:id="@+id/nicknameSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/firstNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size"/>

            <EditText
                android:id="@+id/firstNameSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/lastNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size"/>

            <EditText
                android:id="@+id/lastNameSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/contactDetailsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_details"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/default_textView_text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/phoneNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size"/>

            <EditText
                android:id="@+id/phoneNumberSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/saveProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editProfile"
                android:text="@string/save_profile" />

            <Button
                android:id="@+id/viewOwnListingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="viewOwnListings"
                android:text="@string/view_my_listings" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/default_textView_text_size"
                android:textColor="@android:color/secondary_text_light"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/changePasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password_notice"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size"/>

            <TextView
                android:id="@+id/currentPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size"/>

            <EditText
                android:id="@+id/currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/newPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/confirmNewPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="@dimen/small_textView_text_size" />

            <EditText
                android:id="@+id/confirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/savePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editPassword"
                android:text="@string/save_password" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>