<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".UI.SaleDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        tools:ignore="UselessParent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_extra_large"
                android:background="@drawable/boxed"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/nicknameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_large"
                android:background="@drawable/boxed"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_large"
                android:background="@drawable/boxed"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/inter_space_large"
                android:background="@drawable/boxed"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>

            <Button
                android:id="@+id/submitSignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/button_shadow_margin"
                android:layout_marginTop="@dimen/inter_space_extra_large"
                android:onClick="submit"
                android:background="@drawable/rounded_corner_button_colored"
                android:textColor="@color/white"
                android:textSize="@dimen/default_button_text_size"
                android:text="@string/sign_up" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>