<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".widgets.NotSignedIn">

    <LinearLayout
        android:id="@+id/notLoggedInLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/default_not_logged_in_message"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/default_textView_text_size"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sign_in"
            android:textColor="@color/pureWhite"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fillListing_inter_space_large"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sign_up"
            android:textColor="@color/pureWhite"
            android:textSize="@dimen/default_button_text_size" />



        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />



    </LinearLayout>
</RelativeLayout>